# backend/docs/swagger.json
@@ -184,7 +184,7 @@
         },
         "/api/exams": {
             "get": {
-                "description": "Get exam by ID",
+                "description": "list my exams",
                 "consumes": [
                     "application/json"
                 ],
@@ -194,15 +194,8 @@
                 "tags": [
                     "Exam"
                 ],
-                "summary": "Get exam by ID",
+                "summary": "list my exams",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Exam ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Bearer和token空格拼接",
@@ -215,7 +208,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Exam"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Exam"
+                            }
                         }
                     },
                     "400": {
@@ -226,12 +222,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/common.HttpError"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/common.HttpError"
                         }
@@ -306,6 +296,15 @@
                 ],
                 "summary": "End exam",
                 "parameters": [
+                    {
+                        "description": "json",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/exam.EndExamRequest"
+                        }
+                    },
                     {
                         "type": "string",
                         "description": "Bearer和token空格拼接",
@@ -438,6 +437,61 @@
             }
         },
         "/api/exams/{id}": {
+            "get": {
+                "description": "Get exam by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exam"
+                ],
+                "summary": "Get exam by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Exam ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer和token空格拼接",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Exam"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/common.HttpError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/common.HttpError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/common.HttpError"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Modify exam by ID",
                 "consumes": [
@@ -1407,6 +1461,14 @@
                 }
             }
         },
+        "exam.EndExamRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "exam.EndExamResponse": {
             "type": "object",
             "properties": {
@@ -1505,12 +1567,6 @@
                 "id": {
                     "description": "IsPublic    bool   `json:\"is_public\"`",
                     "type": "integer"
-                },
-                "punishments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Punishment"
-                    }
                 },
                 "score": {
                     "type": "integer"
@@ -1641,10 +1697,14 @@
                 1000000000,
                 60000000000,
                 3600000000000,
+                -9223372036854775808,
+                9223372036854775807,
                 1,
                 1000,
                 1000000,
-                1000000000
+                1000000000,
+                60000000000,
+                3600000000000
             ],
             "x-enum-varnames": [
                 "minDuration",
@@ -1655,10 +1715,14 @@
                 "Second",
                 "Minute",
                 "Hour",
+                "minDuration",
+                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
-                "Second"
+                "Second",
+                "Minute",
+                "Hour"
             ]
         },
         "user.ChangePasswordRequest": {
